test/1.4/errors/T_EILLCOMP.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method init() {
    // no error
    cast(dev, object) == cast(dev, object);

    /// ERROR EILLCOMP
    cast(dev, object) == cast(dev, init);
}
